refactor: Rename ExtToolExecutionResultMessage to ExtendedToolResult and use delegation